expected/main/core/bitdata/bitdata9.err
ERROR: "actual/main/core/bitdata/bitdata9.lc", line 2
bitdata W2 = W2 [ z :: V2 | B1 ]
             ^
Width of W2 is 2 more than expected

ERROR: Aborting after previously reported error

